[gd_scene load_steps=16 format=3 uid="uid://bg4e8tn2ewtlx"]

[ext_resource type="Script" uid="uid://b2ovbmo2aio57" path="res://levels/level1/scenes/scripts/intro_02.gd" id="1_ujtq3"]
[ext_resource type="Texture2D" uid="uid://dd1bvhm271yg5" path="res://levels/level1/images/level1.2-intro02-1.png" id="2_ksthv"]
[ext_resource type="Texture2D" uid="uid://cqiccpi8m61iy" path="res://levels/level1/images/level1.2-intro01-1.png" id="2_ujtq3"]
[ext_resource type="Texture2D" uid="uid://dftt8u8588m3y" path="res://levels/level1/images/level1.2-intro01-2.png" id="3_ncpt4"]
[ext_resource type="Texture2D" uid="uid://evddy2hlqk03" path="res://levels/level1/images/level1.2-intro01-3.png" id="4_dxt5e"]
[ext_resource type="Texture2D" uid="uid://boa7qn8ej60oy" path="res://levels/level1/images/level1.2-intro01-4.png" id="5_7bshh"]
[ext_resource type="AudioStream" uid="uid://c0pj7nw8qsihu" path="res://levels/level1/scenes/audio/mech_installation.ogg" id="8_ksthv"]
[ext_resource type="AudioStream" uid="uid://b1y2jn0rh64us" path="res://levels/level1/scenes/audio/intro01.ogg" id="10_m0fnd"]
[ext_resource type="Shader" uid="uid://ljvo33uh1a5y" path="res://scanlines.gdshader" id="14_1v0wr"]

[sub_resource type="Animation" id="Animation_qr17n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GridContainer/01_1/TextureRect4:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GridContainer/01_2/TextureRect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GridContainer/01_3/TextureRect2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GridContainer2/02_1/TextureRect4:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GridContainer/01_4/TextureRect2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vqfcl"]
resource_name = "intro01_1"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GridContainer/01_1/TextureRect4:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.66667, 2.63333, 3.36, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GridContainer/01_2/TextureRect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.03333, 1.66667, 2.63333, 3.36, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GridContainer/01_3/TextureRect2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2, 2.63333, 3.36, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GridContainer/01_4/TextureRect2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.63333, 3.36667, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_uosaj"]
resource_name = "intro01_2"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GridContainer2/02_1/TextureRect4:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7ulwy"]
resource_name = "intro01_3"
length = 4.0

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xwtgo"]
_data = {
&"RESET": SubResource("Animation_qr17n"),
&"intro01_1": SubResource("Animation_vqfcl"),
&"intro01_2": SubResource("Animation_uosaj"),
&"intro01_3": SubResource("Animation_7ulwy")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q02iu"]
shader = ExtResource("14_1v0wr")
shader_parameter/line_density = 4.0
shader_parameter/line_darkness = 0.6

[node name="Intro02" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ujtq3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="01_1" type="Control" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect4" type="TextureRect" parent="GridContainer/01_1"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 27.0
offset_right = -12.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ujtq3")
expand_mode = 1

[node name="01_2" type="Control" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect2" type="TextureRect" parent="GridContainer/01_2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 12.0
offset_right = -11.0
offset_bottom = -166.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ncpt4")
expand_mode = 1

[node name="01_3" type="Control" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect2" type="TextureRect" parent="GridContainer/01_3"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -141.0
offset_right = -12.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_dxt5e")
expand_mode = 1

[node name="01_4" type="Control" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect2" type="TextureRect" parent="GridContainer/01_4"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -80.0
offset_right = -12.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_7bshh")
expand_mode = 1

[node name="GridContainer2" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="02_1" type="Control" parent="GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect4" type="TextureRect" parent="GridContainer2/02_1"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 457.0
offset_right = -13.0
offset_bottom = -475.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ksthv")
expand_mode = 1

[node name="intro01_1_player" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xwtgo")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_m0fnd")
autoplay = true
bus = &"Music"

[node name="MechInstallation" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ksthv")
volume_db = -6.559
bus = &"Music"

[node name="EffettiPostProcessing" type="CanvasLayer" parent="."]
layer = 128

[node name="ColorRect" type="ColorRect" parent="EffettiPostProcessing"]
material = SubResource("ShaderMaterial_q02iu")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Skip" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="animation_finished" from="intro01_1_player" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="Skip" to="." method="_on_skip_pressed"]
